Version 0.3.3 - Scroll Fixes
Overflow-x now hidden.
Scrollbar corner and resize now hidden.
Started About css

--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,7 @@ body {
 
 #page-content {
     overflow: scroll;
+    overflow-x: hidden;
     height: 85% !important;
     padding: 0 var(--page-padding);
     padding-bottom: 10vh;
